src/components/landing/landing.scss
@import "../../mixins.scss";

.side-img-container {
    position: fixed;
    height: 100%;
    width: 100%;
}
.side-img {
    position: fixed;
    bottom: 0;
    left: -20em;
    z-index: -923;
    opacity: 0.2;
}

.top-area-split {
    display: flex;

    .website-info {
        padding-right: 4em;
        flex: 3;
        line-height: 3em;

        .info-heading {
            font-size: 2em;
        }

        .info-text {
            margin-bottom: 2em;
        }
    }

    .sign-up-form {
        flex: 2;
    }
}

